#Author: Pawinee Mahantamak
#Course: CST8002 - Practical Project 1
#Professor: Stanley Pieda
#Due Date: 2025-01-26

[package]
name = "cst8002_practical_project_010_pawinee_mahantamak"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
uuid = { version = "1.4", features = ["v4"] }
